--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Site professionnel Sylvain Laconi"
+      content="Site personnel présentant mes réalisations web et mobile"
     />
-    <meta property="og:title" content="Portfolio Sylvain Laconi" />
-    <meta property="og:type" content="webapp" />
+    <meta property="og:title" content="Portfolio" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sylvain-laconi.fr/" />
     <meta property="og:image" content="https://i.ibb.co/ZSsymjK/portfolio-picture1.png" />
     <meta property="og:site_name" content="Portfolio Sylvain Laconi" />
+    <meta name="author" content="Sylvain Laconi">
+
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
